--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,26 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-19 Tue 15:30]
+#+CAPTION: Clock summary at [2019-03-20 Wed 07:22]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *58:56* |       |       | 100.0 |
+| *Total time*                                             | *62:14* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 58:56   |       |       | 100.0 |
-| Active                                                   |         | 58:56 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  2:22 |   4.0 |
-| Sprint and product backlog grooming                      |         |       |  6:43 |  11.4 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   6.4 |
+| Stories                                                  | 62:14   |       |       | 100.0 |
+| Active                                                   |         | 62:14 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  2:22 |   3.8 |
+| Sprint and product backlog grooming                      |         |       |  7:38 |  12.3 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   6.1 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
-| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.3 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |   9.8 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  10.9 |
-| Empty directories should be deleted                      |         |       |  5:37 |   9.5 |
-| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.0 |
-| Orchestration test is broken on Windows                  |         |       |  2:40 |   4.5 |
-| Code generation of tests for dogen models                |         |       | 23:08 |  39.3 |
-| Formatters have been incorrectly placed under extraction |         |       |  0:23 |   0.7 |
+| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.2 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |   9.3 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  10.3 |
+| Empty directories should be deleted                      |         |       |  5:37 |   9.0 |
+| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   1.8 |
+| Orchestration test is broken on Windows                  |         |       |  2:40 |   4.3 |
+| Code generation of tests for dogen models                |         |       | 23:22 |  37.5 |
+| Formatters have been incorrectly placed under extraction |         |       |  0:23 |   0.6 |
+| Modeline groups as meta-model elements                   |         |       |  2:09 |   3.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -232,6 +233,8 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-03-20 Wed 06:31]--[2019-03-20 Wed 07:10] =>  0:39
+    CLOCK: [2019-03-18 Tue 20:02]--[2019-03-18 Tue 20:18] =>  0:23
     CLOCK: [2019-03-18 Tue 19:02]--[2019-03-18 Tue 19:25] =>  0:23
     CLOCK: [2019-03-19 Tue 06:02]--[2019-03-19 Tue 07:01] =>  0:59
     CLOCK: [2019-03-18 Mon 10:36]--[2019-03-18 Mon 10:44] =>  0:08
@@ -698,6 +701,7 @@ Notes:
 *** COMPLETED Code generation of tests for dogen models               :story:
     CLOSED: [2019-03-19 Tue 15:04]
     :LOGBOOK:
+    CLOCK: [2019-03-19 Tue 18:39]--[2019-03-19 Tue 18:53] =>  0:14
     CLOCK: [2019-03-19 Tue 13:53]--[2019-03-19 Tue 15:04] =>  1:11
     CLOCK: [2019-03-19 Tue 12:49]--[2019-03-19 Tue 13:02] =>  0:13
     CLOCK: [2019-03-19 Tue 12:14]--[2019-03-19 Tue 12:15] =>  0:01
@@ -2643,3 +2647,13 @@ the code once we have a graph + pipeline.
 Once references are supplied as meta-data, we could conceivably create
 a loop in CMake to generates all of the knitting targets based on the
 contents of the diagrams directory.
+*** CANCELLED Generator usage in template tests needs to be cleaned   :story:
+    CLOSED: [2019-03-20 Wed 06:57]
+
+*Rationale*: canned tests have been removed.
+
+At present some template tests in =utility/test= ask for a
+generator, other for instances. We should only have one way of doing
+this. We should probably always ask for generators as this means less
+boiler plate code in tests. It does mean a fixed dependency on
+generators.
